--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -51,3 +51,17 @@
 .swiper-pagination-bullet-active {
     background: rgb(79 70 229)!important;
 }
+.yotpo-star-rating-icons fieldset {
+    display: flex!important;
+}
+.yotpo-input-wrapper textarea {
+    border: 2px solid rgba(122,65,166,1)!important;
+    border-radius: 5px;
+}
+.yotpo-filters-top-panel {
+    flex-wrap: wrap!important;
+    justify-content: center!important;
+}
+.yotpo-filters-top-panel > div {
+    padding-bottom: 6px!important;
+}
